Cambios de estilo y parrafo nuevo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio pariatur optio exercitationem tenetur magnam. Saepe, impedit cumque vero nisi adipisci est illum, asperiores distinctio reprehenderit non itaque culpa vel eum laboriosam sint quaerat ratione explicabo ipsum voluptatum eveniet molestiae nostrum voluptates. Obcaecati atque quaerat excepturi minima, doloribus dolorem facere soluta quidem nobis? Cum, esse. Eaque repellendus exercitationem ad ipsum nobis. Ea ipsum eveniet exercitationem nobis vel sequi reiciendis labore. Earum illo, odit non voluptatem autem deleniti iste qui neque animi ipsum reiciendis aperiam! A mollitia reiciendis dolorem aliquam, fugiat magnam voluptates sequi deserunt nam veniam dolore dignissimos porro ipsam magni?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt pariatur sint provident illo tempore qui vel, tempora alias modi natus a reiciendis dicta obcaecati reprehenderit aliquid ab, expedita aspernatur maxime eveniet eum ut fuga aperiam adipisci! Ut, perspiciatis? Itaque nesciunt rem dicta enim dignissimos deserunt excepturi ipsa odit nisi consequuntur?</p>
 </body>
 </html>
